# queryer-rs

./: Cargo.toml
queryer/: Cargo.toml
queryer/examples/: covid.rs  covid_sql.rs  dialect.rs
queryer/src/: convert.rs  dialect.rs  fetcher.rs  lib.rs
queryer_py/: Cargo.toml
